most issues with game fixed - Known Bug: have to click for reload to work on firefox for some reason

--- a/static/css/game.css
+++ b/static/css/game.css
@@ -27,6 +27,10 @@
     display: none;
 }
 
+#broken {
+    display: none;
+}
+
 .rock {
     transform: rotate(270deg) scaleY(-1);
 }
