--- a/static/css/profilepage.css
+++ b/static/css/profilepage.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-*{
+main *{
     list-style: none;
     font-family: 'Montserrat', sans-serif;
     font-size: 22px;
     margin: 0;
     padding: 0;
 }
-body {
+main body {
     display: flex;
     flex-direction: column;
     background-color: darkslategrey;
@@ -59,7 +59,7 @@ body {
     transform: translate(-50%, -50%);
 
 }
-img {  
+main img {  
     display: block;
     margin-left: auto;
     margin-right: auto;
